protocols/tests/snapshots/protocols__typecheck__tests__cond.snap
---
source: protocols/src/typecheck.rs
expression: content
---
warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/multipliers/mult_cond.prot:19:3
   │
19 │   dut.a := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/multipliers/mult_cond.prot:20:3
   │
20 │   dut.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

error: `dut.c` is a output field of the struct `dut`, but only input fields are allowed to appear in assignments)
   ┌─ tests/multipliers/mult_cond.prot:30:3
   │
30 │   dut.c := 1'b1;
   │   ^^^^^^^^^^^^^^ `dut.c` is a output field of the struct `dut`, but only input fields are allowed to appear in assignments)
